--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.15.2",
-    "pm2": "^2.4.4"
+    "mongorito": "^2.2.0",
+    "pm2": "^2.4.4",
+    "supertest": "^3.0.0"
   },
   "devDependencies": {
     "ava": "^0.19.0"
