--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "mongorito": "^2.2.0",
     "pm2": "^2.4.4",
-    "supertest": "^3.0.0"
+    "supertest": "^3.0.0",
+    "value-box": "^0.12.0",
+    "winston": "^2.3.1"
   },
   "devDependencies": {
     "ava": "^0.19.0"
