--- a/package.json
+++ b/package.json
@@ -4,18 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test:unit": "ava -v test/unit"
+    "test:unit": "ava -v test/unit",
+    "start:server": "node ./app/index.js --application=server",
+    "start:client": "node ./app/index.js --application=client"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.1",
+    "ejs": "^2.5.6",
     "express": "^4.15.2",
+    "got": "^6.7.1",
     "mongorito": "^2.2.0",
     "pm2": "^2.4.4",
     "supertest": "^3.0.0",
     "value-box": "^0.12.0",
-    "winston": "^2.3.1"
+    "winston": "^2.3.1",
+    "yargs": "^7.0.2"
   },
   "devDependencies": {
     "ava": "^0.19.0"
