--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build:client": "./node_modules/.bin/webpack --config webpack.client.config.js",
     "test:unit": "ava -v test/unit",
     "start:server": "node ./app/index.js --application=server",
     "start:client": "node ./app/index.js --application=client"
@@ -11,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.16.0",
     "body-parser": "^1.17.1",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
@@ -19,10 +21,12 @@
     "pm2": "^2.4.4",
     "supertest": "^3.0.0",
     "value-box": "^0.12.0",
+    "vue": "^2.2.6",
     "winston": "^2.3.1",
     "yargs": "^7.0.2"
   },
   "devDependencies": {
-    "ava": "^0.19.0"
+    "ava": "^0.19.0",
+    "webpack": "^2.3.3"
   }
 }
