--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "mongoose": "^4.9.4",
     "value-box": "^0.12.0",
     "vue": "^2.2.6",
+    "vue-resource": "^1.3.1",
+    "vuex": "^2.2.1",
     "winston": "^2.3.1",
     "yargs": "^7.0.2"
   },
