--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bulma": "^0.4.0",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
+    "jade": "^1.11.0",
     "mongoose": "^4.9.4",
     "value-box": "^0.12.0",
     "vue": "^2.2.6",
