--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
   },
   "author": "",
   "license": "ISC",
+  "ava": {
+    "require": [
+      "babel-register"
+    ],
+    "babel": "inherit"
+  },
   "dependencies": {
     "axios": "^0.16.0",
     "body-parser": "^1.17.1",
@@ -31,6 +37,10 @@
   },
   "devDependencies": {
     "ava": "^0.19.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.24.1",
     "css-loader": "^0.28.0",
     "nodemon": "^1.11.0",
     "sinon": "^2.1.0",
