--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "db:stop": "docker stop reading-list-db",
     "client:build": "./node_modules/.bin/webpack --config ./build/webpack.client.config.js",
     "client:start": "./node_modules/.bin/nodemon --config nodemon.client.json ./app/index.js --application=client",
-    "server:start": "./node_modules/.bin/nodemon --config nodemon.server.json ./app/index.js --application=server"
+    "server:start": "./node_modules/.bin/nodemon --config nodemon.server.json ./app/index.js --application=server",
+    "test": "xo"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +20,10 @@
       "babel-register"
     ],
     "babel": "inherit"
+  },
+  "xo": {
+    "space": true,
+    "semicolon": false
   },
   "dependencies": {
     "axios": "^0.16.0",
@@ -36,6 +41,7 @@
   },
   "devDependencies": {
     "ava": "^0.19.0",
+    "babel-core": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
@@ -45,6 +51,7 @@
     "sinon": "^2.1.0",
     "vue-loader": "^11.3.4",
     "vue-template-compiler": "^2.2.6",
-    "webpack": "^2.3.3"
+    "webpack": "^2.3.3",
+    "xo": "^0.18.1"
   }
 }
