--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "db:stop": "docker stop reading-list-db",
     "client:build": "./node_modules/.bin/webpack --config ./build/webpack.client.config.js",
     "client:start": "./node_modules/.bin/nodemon --config nodemon.client.json ./app/index.js --application=client",
+    "server:build": "babel app/server -d dist",
     "server:start": "./node_modules/.bin/nodemon --config nodemon.server.json ./app/index.js --application=server",
     "test": "xo"
   },
@@ -41,6 +42,7 @@
   },
   "devDependencies": {
     "ava": "^0.19.0",
+    "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
