--- a/package.json
+++ b/package.json
@@ -6,13 +6,9 @@
   "scripts": {
     "test:unit": "ava -v test/unit",
     "test:unit:watch": "ava --watch -v test/unit",
-    "db:start": "docker start reading-list-db",
-    "db:stop": "docker stop reading-list-db",
-    "client:build": "babel app/client -d dist/client && webpack --config ./build/webpack.client.config.js",
-    "client:start": "npm run client:build && nodemon --config nodemon.client.json ./dist/client/index.js",
-    "server:build": "babel app/server -d dist/server",
-    "server:start": "npm run server:build && nodemon --config nodemon.server.json ./dist/server/index.js",
-    "test": "xo"
+    "server": "nodemon ./dist/server/index.js",
+    "client": "nodemon ./dist/client/index.js",
+    "lint": "xo"
   },
   "author": "",
   "license": "ISC",
