--- a/infra/docker/Makefile
+++ b/infra/docker/Makefile
@@ -1,4 +1,24 @@
-docker-db:
-	docker-compose -f infra/docker/compose/dev.yml up --build -d mongo
-docker-client:
-	docker-compose -f infra/docker/compose/dev.yml up --build -d client
+DEV_RUNNER=reading-list-dev-runner:master
+DEV_WATCHER=reading-list-dev-watcher:master
+COMPOSE=docker-compose -f infra/docker/compose/development.yml
+
+build-runner-image:
+	docker build \
+		-t $(DEV_RUNNER) \
+		-f ./infra/docker/images/runner.dev.docker \
+		.
+
+run:
+	$(COMPOSE) up -d
+
+stop:
+	$(COMPOSE) stop
+
+log-server:
+	$(COMPOSE) logs server
+
+log-client:
+	$(COMPOSE) logs client
+
+log-db:
+	$(COMPOSE) logs db
