--- a/package.json
+++ b/package.json
@@ -44,8 +44,12 @@
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.24.1",
     "css-loader": "^0.28.0",
+    "file-loader": "^0.11.1",
+    "font-awesome": "^4.7.0",
     "nodemon": "^1.11.0",
     "sinon": "^2.1.0",
+    "style-loader": "^0.16.1",
+    "url-loader": "^0.5.8",
     "vue-loader": "^11.3.4",
     "vue-template-compiler": "^2.2.6",
     "webpack": "^2.3.3",
